<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.TextQuest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/char_p_data_name"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/char_p_data_name_label"
            android:textAppearance="@style/TextAppearance.TextQuest.Key"
            android:textSize="14dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/char_p_data_value_label"
        android:layout_width="84dp"
        android:layout_height="23dp"
        android:layout_weight="1"
        android:text="@string/char_p_data_value_label"
        android:textAppearance="@style/TextAppearance.TextQuest.Label" />

    <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/char_p_data_value"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/char_p_data_value_hint"
        android:inputType="date|textUri|textShortMessage|textLongMessage|textAutoCorrect|numberSigned|textVisiblePassword|textWebEditText|textMultiLine|textNoSuggestions|textFilter|number|datetime|textWebEmailAddress|textPersonName|text|textPhonetic|textCapSentences|textPassword|textAutoComplete|textImeMultiLine|textPostalAddress|numberDecimal|textEmailAddress|numberPassword|textCapWords|phone|textEmailSubject|textCapCharacters|time|textWebPassword"
        android:textAppearance="@style/TextAppearance.TextQuest.Standard"
        android:textColor="@color/standardTextColor" />

    <Space
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/char_p_data_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        app:srcCompat="@drawable/ic_x" />
</LinearLayout>