<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TextQuest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        android:orientation="vertical"
        tools:context=".UserManagerActivity">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/user_manager_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.TextQuest.Headline1" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/primaryColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="email"
                android:textAppearance="@style/TextAppearance.TextQuest.Key"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Display Name"
                android:textAppearance="@style/TextAppearance.TextQuest.Standard"
                android:textSize="12sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/primaryColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/change_pass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/user_pass_ch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_change_password"
                android:textAppearance="@style/TextAppearance.TextQuest.Headline5" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TableLayout
                android:id="@+id/change_pass_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_new_pass_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_new_pass_label"
                        android:textAppearance="@style/TextAppearance.TextQuest.Label" />

                    <EditText
                        android:id="@+id/user_new_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/standardTextColor" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:id="@+id/repeat_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_repeat_new_pass_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/user_repeat_new_pass_label"
                        android:textAppearance="@style/TextAppearance.TextQuest.Label" />

                    <EditText
                        android:id="@+id/user_repeat_new_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/standardTextColor" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/user_change_pass_button"
            style="@style/Widget.TextQuest.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/user_change_pass_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/user_finish_button"
                style="@style/Widget.TextQuest.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/user_manage_finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>